...
//  Created by Виктория Козырева on 09.09.2021.
//

import UIKit

enum SettingsType: String {
    case location = "Город"
    case eventCategories = "Интересы"
}
// MARK: Отвечает за экран настроек
class SettingsViewController: UIViewController {

    let settings: [SettingsType] = [.location, .eventCategories]
...
